--- a/Image Captioning.ipynb
+++ b/Image Captioning.ipynb
@@ -616,16 +616,7 @@
     "id": "cJP39cegNrOf"
    },
    "outputs": [],
-   "source": [
-    "def progressBar(value, endvalue, bar_length=20,job='Job'):\n",
-    "\n",
-    "    percent = float(value) / endvalue\n",
-    "    arrow = '-' * int(round(percent * bar_length)-1) + '>'\n",
-    "    spaces = ' ' * (bar_length - len(arrow))\n",
-    "\n",
-    "    sys.stdout.write(\"\\r{0} Completion: [{1}] {2}%\".format(job,arrow + spaces, int(round(percent * 100))))\n",
-    "    sys.stdout.flush()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -3105,7 +3096,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -3119,7 +3110,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
